--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Pagoplux</title>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -15,6 +19,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!-- PAGOPLUX -->
+    <!-- Sandbox: -->
+    <!-- <script src="https://sandbox-paybox.pagoplux.com/paybox/index.js"></script> -->
+    <!-- Producción: -->
+    <!-- <script src="https://paybox.pagoplux.com/paybox/index.js"></script> -->
   </head>
   <body class="mat-typography">
     <app-root></app-root>
